Add mariadb with EF core support

--- a/src/Volo.Wish.Api/appsettings.json
+++ b/src/Volo.Wish.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "mariadb": "Server=localhost;User Id=root;Password=voloroot;Database=volo" 
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
