--- a/src/Volo.Wish.Infrastructure/Volo.Wish.Infrastructure.csproj
+++ b/src/Volo.Wish.Infrastructure/Volo.Wish.Infrastructure.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\Volo.Wish.Core\Volo.Wish.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.4" />
+  </ItemGroup>
+
 </Project>
