--- a/src/Volo.Wish.Core/Volo.Wish.Core.csproj
+++ b/src/Volo.Wish.Core/Volo.Wish.Core.csproj
@@ -8,4 +8,10 @@
     <PackageReference Include="Autofac" Version="4.8.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Caching.Abstractions">
+      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.caching.abstractions\2.1.1\lib\netstandard2.0\Microsoft.Extensions.Caching.Abstractions.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
